--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
+      android:icon="@mipmap/qr_code_generator"
+      android:roundIcon="@mipmap/qr_code_generator_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <activity
